--- a/scala/build.gradle
+++ b/scala/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.scala-lang:scala-library:2.12.1'
     testImplementation 'org.scalatest:scalatest_2.11:3.0.0'
+//    implementation 'org.morphir:morphir-sdk-core_2.12:0.18.2'
 }
 
 sourceSets {
